--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
